--- a/package.json
+++ b/package.json
@@ -9,16 +9,13 @@
   "author": "YmerDev <yaymer224@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "test": "mocha",
-    "start:dev": "nodemon"
+    "test": "mocha"
   },
   "devDependencies": {
     "@types/chai": "^4.2.11",
     "@types/node": "^13.9.2",
     "chai": "^4.2.0",
     "mocha": "^7.1.1",
-    "nodemon": "^2.0.2",
-    "ts-node": "^8.7.0",
     "typescript": "^3.8.3"
   },
   "dependencies": {
